syntax = "proto3";

option csharp_namespace = "Artemis.Service.Protos";
import "google/protobuf/wrappers.proto";

package artemis.service.protos;

// 空响应
message EmptyResponse {
  // 状态码
  int32 Code = 1;
  // 是否成功
  bool Succeeded = 2;
  // 消息
  string Message = 3;
  // 错误
  google.protobuf.StringValue Error = 4;
  // 日期时间
  string DateTime = 5;
  // 时间戳
  int64 Timestamp = 6;
}

// 分页
message PageSlot {
  // 页码
  google.protobuf.Int32Value Page = 4;
  // 条目数
  google.protobuf.Int32Value Size = 5;
}